# blog-pessoal

backend/: Cargo.toml  remove_tilde.sh
backend/src/: database.rs  main.rs  models.rs
frontend/: package-lock.json  package.json  remove_header.sh  remove_tilde.sh
frontend/src/components/: Login.tsx  LoginForm.tsx  RedLogos.tsx  RegisterForm.tsx
frontend/src/pages/: _app.tsx  index.tsx  login.tsx  posts.tsx  register.tsx
frontend/src/styles/: globals.css  loginPageDesktop.module.css  loginPageMobile.module.css  responsiveness.ts
frontend/src/styles/loginPage/: loginPageDesktop.module.css  loginPageMobile.module.css
frontend/src/styles/registerPage/: registerPageDesktop.module.css  registerPageMobile.module.css
