[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rocket_contrib = "0.4.11"
rocket_cors = "0.6.0"  # Adicione esta linha se ainda não estiver presente
diesel = { version = "1.4.7", features = ["sqlite"] }